--- a/Home/home.css
+++ b/Home/home.css
@@ -1,8 +1,14 @@
 /* fontes */
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Hepta+Slab&family=Hubballi&family=Jaldi&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+body {
+    background-color: #F5FCFD;
+}
 
-nav a {
+.menu-header a {
     text-transform: uppercase;
     text-decoration: none;
     color: #062E38;
@@ -26,26 +32,27 @@ header{
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     z-index: 10;
 }
-.header {
-    width: 80%;
+.box-header {
+    height: 50px;
+    width: 940px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin: 0 auto;
 }
 
-main { 
-    margin-top: 50px;
-    width: 100%;
+#top-home {
+width: 50px;
 }
 
-.img-principal {
+.img-banner {
     width: 100%;
     display: flex;
     position: relative;
 }
 
-.titulo-principal {
+.titulo-banner {
+    margin-top: 20px;
     font-family: 'Hubballi';
     color: #C07B56;
     font-size: 50px;
@@ -55,29 +62,59 @@ main {
     
     
 }
-.secundaria {
-    display: flex;
+.sobre {
+    margin-top: 30px;
 }
 
-.dreams {
+.sobre-titulo {
     font-size: 50px;
-    text-align: center;
     text-transform: uppercase;
     color: #118CAB;
     font-family: 'Hubballi';
+    text-align: center;
+    margin-top: 80px;
 }
 
-.dreams-escrita {
+.sobre-escrita {
     font-family: 'Hepta Slab';
     font-size: 25px;
-    width: 600px;
+    width: 940px;
     text-align: center;
     text-align: justify;
-    margin-top: 100px;
-    line-height: 40px;
+    line-height: 50px;
     color: #062E38;
+    margin: 20px auto 100px auto;
     
 }
+
+.tipo-imoveis {
+    width: 100%;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    row-gap: 60px;
+    margin-bottom: 100px;
+    align-items: center;
+ 
+}
+
+.itens-tipo {
+    font-size: 20px;
+    font-family: 'Jaldi', sans-serif;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    display: flex;
+    gap: 20px;
+}
+
+.img-tipo {
+    width: 50px;
+    height: 50px;
+}
+
+
+
 
 
 
