--- a/Contato/contato.css
+++ b/Contato/contato.css
@@ -40,6 +40,16 @@ header{
 }
 
 /* main */
+
+/* ir pro topo*/
+
+#top-adicionar-imoveis {
+  width: 50px;
+  }
+
+/* fim de ir pro topo*/
+
+
 /* fim do main */
 
 /* início do footer */
