--- a/Contato/contato.css
+++ b/Contato/contato.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Hubballi&family=Jaldi&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Hepta+Slab&family=Jaldi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Hepta+Slab&family=Hubballi&family=Jaldi&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -49,19 +47,15 @@ header{
 }
 /* fim do header */
 
-.espacamento{
+#top-contato{
   height: 50px;
 }
 
 /* main */
 
 main {
-  width: 100%;
-  height: 110vh;
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-bottom: 5rem;
 }
 
 /* Estilizando titulo contato */
@@ -69,7 +63,7 @@ main {
   font-family: 'Hubballi', cursive;
   text-transform: uppercase;
   font-size: 2.4em;
-  margin: 9em auto 60px auto;
+  margin: 40px auto;
   text-align: center;
   transition: 0.5s all;
   color: #118CAB;
@@ -84,16 +78,17 @@ main {
 .form {
   display: flex;
   flex-direction: column;
-  margin-bottom: 9em;
+  margin-bottom: 3em;
+  margin-top: 3em;
   box-shadow: 5px 5px 5px 5px #0000001c;
-  padding: 0 2rem 0 2rem;
+  padding: 2rem 5rem 2rem 5rem;
 }
 .input-group {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem 0;
-  font-family: 'Jaldi', sans-serif;
+  font-family: 'Hepta Slab', serif;
   font-size: 1.3em;
 }
 .input-box{
@@ -106,11 +101,12 @@ main {
   margin: 0.6rem 0;
   padding: 0.8rem 1.2rem;
 }
-.input-box input:hover {
-  background-color: #e2eaf3;
-}
+ .input-box input:hover {
+  border: 2px solid #118CAB;
+} 
+
 .input-box input:focus-visible {
-  outline: 1px solid #118CAB;
+  border: 1px solid #118CAB;
 }
 
 .input-mensagem {
@@ -126,7 +122,7 @@ main {
   resize: none;
 }
 .input-mensagem textarea:hover {
-  background-color: #e2eaf3;
+  border: 1px solid #118CAB;
 }
 /* fim estilização form */
 
@@ -134,20 +130,20 @@ main {
 /* estilização checked */
 
 .checked-area {
-  font-family: 'Jaldi', sans-serif;
+  font-family: 'Hepta Slab', serif;
 }
 .checked-titulo{
   font-size: 1.3em;
 }
 .checked-grupo {
-  margin-top: 0.6rem;
+  margin-top: 0.9rem;
   padding: 0 0.5rem;
 }
 
 .inChecked {
   display: flex;
   align-items: center;
-  margin: 0.6rem 0 0.5rem 0;
+  margin: 0.6rem 0 0.9rem 0;
   font-size: 1.1rem;
 }
 
@@ -163,25 +159,18 @@ main {
 
 /* botão */
 
-.btEnviar {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  margin-bottom: 1rem;
-  justify-content: center;
-}
-.btEnviar a {
-  text-decoration: none;
+.bt-enviar{
+  margin: 10px auto;
+  width: 250px;
+  height: 35px;
   color: #fff;
-}
-.btEnviar button{
-  margin-top: 1rem;
+  background-color: #00ACD7;
   border: none;
-  background-color: #4797ac;
-  padding: 0.4rem 1rem;
-  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: bold;
 }
-.btEnviar button:hover {
+
+.bt-enviar:hover {
   background-color: #118CAB;
   transition: 0.2s;
 }
