alterações na página de contato

--- a/Home/home.css
+++ b/Home/home.css
@@ -47,20 +47,21 @@ width: 50px;
 
 .img-banner {
     width: 100%;
+}
+.banner {
+    justify-content: center;
     display: flex;
     position: relative;
+
 }
 
 .titulo-banner {
-    margin-top: 20px;
+  
     font-family: 'Hubballi';
     color: #C07B56;
     font-size: 50px;
-    position: absolute;
-    bottom: 530px;
-    left: 25%;
-    
-    
+    position: absolute; 
+    top: 30%;
 }
 .sobre {
     margin-top: 30px;
