--- a/Contato/contato.css
+++ b/Contato/contato.css
@@ -52,11 +52,18 @@ header{
 }
 
 /* main */
+main{ 
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
 
-main {
+.section-form {
   display: flex;
   justify-content: center;
 }
+
+
 
 /* Estilizando titulo contato */
 .contato-titulo {
@@ -89,7 +96,7 @@ main {
   justify-content: space-between;
   padding: 1rem 0;
   font-family: 'Hepta Slab', serif;
-  font-size: 1.3em;
+  font-size: 0.9em;
 }
 .input-box{
   display: flex;
@@ -100,9 +107,11 @@ main {
 .input-box input {
   margin: 0.6rem 0;
   padding: 0.8rem 1.2rem;
+  border: none;
+  box-shadow: 2px 2px 10px 1px #0000001c;
 }
- .input-box input:hover {
-  border: 2px solid #118CAB;
+ .input-box input:focus {
+  outline: 0;
 } 
 
 .input-box input:focus-visible {
@@ -113,15 +122,19 @@ main {
   display: flex;
   flex-direction: column;
   margin-bottom: 1.1rem;
-  border: none;
 }
 .input-mensagem textarea{
   margin: 0.6rem 0;
   padding: 0.8rem 1.2rem;
   outline: none;
   resize: none;
+  border: none;
+  box-shadow: 2px 2px 10px 1px #0000001c;
 }
-.input-mensagem textarea:hover {
+.input-mensagem textarea:focus {
+  outline: 0;
+}
+.input-mensagem textarea:focus-visible {
   border: 1px solid #118CAB;
 }
 /* fim estilização form */
@@ -133,7 +146,7 @@ main {
   font-family: 'Hepta Slab', serif;
 }
 .checked-titulo{
-  font-size: 1.3em;
+  font-size: 1em;
 }
 .checked-grupo {
   margin-top: 0.9rem;
@@ -144,7 +157,7 @@ main {
   display: flex;
   align-items: center;
   margin: 0.6rem 0 0.9rem 0;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
 }
 
 .inChecked input {
@@ -214,6 +227,15 @@ footer{
 .logo-footer {
   height: 40px;
 }
+
+.desaparecendo{
+  display: none;
+}
+
+.aparecendo{
+  display: block;
+}
+
 
 
 /* fim do footer */
