--- a/Contato/contato.css
+++ b/Contato/contato.css
@@ -1,51 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Hepta+Slab&family=Hubballi&family=Jaldi&display=swap');
-
-html {
-  scroll-behavior: smooth;
-}
-
 body{
-  background-color: #f5fcfd;
+  /* background-color: #f5fcfd; */
+  background: linear-gradient(180deg, rgba(17,140,171,1) 0%, #73d5ed 44%, rgba(245,252,253,1) 100%);
 }
-
-/* Header */
-.menu-header a {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #062E38;
-  margin: 0 15px;
-  font-family: 'Jaldi', sans-serif;
-  font-size: 18px;
-}
-.menu-header a:hover{
-  transition: 0.4s;
-  color: #7d9abb;
-}
-
-.logo {
-  height: 25px;
- 
-}
-
-header{
-  position: fixed;
-  top: 0;
-  height: 50px;
-  width: 100%;
-  display: flex;
-  background-color: #FAFEFF;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  z-index: 10;
-}
-.box-header {
-  height: 50px;
-  width: 80%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: 0 auto;
-}
-/* fim do header */
 
 #top-contato{
   height: 50px;
@@ -89,6 +45,7 @@ main{
   margin-top: 3em;
   box-shadow: 5px 5px 5px 5px #0000001c;
   padding: 2rem 5rem 2rem 5rem;
+  background-color: #EDFBFF;
 }
 .input-group {
   display: flex;
@@ -109,13 +66,14 @@ main{
   padding: 0.8rem 1.2rem;
   border: none;
   box-shadow: 2px 2px 10px 1px #0000001c;
+  border: 1px solid #00000000;
 }
  .input-box input:focus {
   outline: 0;
 } 
 
 .input-box input:focus-visible {
-  border: 1px solid #118CAB;
+  border: 1px solid #febb02;
 }
 
 .input-mensagem {
@@ -130,12 +88,13 @@ main{
   resize: none;
   border: none;
   box-shadow: 2px 2px 10px 1px #0000001c;
+  border: 1px solid #00000000;
 }
 .input-mensagem textarea:focus {
   outline: 0;
 }
 .input-mensagem textarea:focus-visible {
-  border: 1px solid #118CAB;
+  border: 1px solid #febb02;
 }
 /* fim estilização form */
 
@@ -177,8 +136,9 @@ main{
   width: 250px;
   height: 35px;
   color: #fff;
-  background-color: #00ACD7;
+  background-color: #febb02;
   border: none;
+  color: #096075;
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -194,40 +154,6 @@ main{
 
 /* fim do main */
 
-/* início do footer */
-footer{
-  height: 70px;
-  width: 100%;
-  background-color: #118CAB;
-  display: flex;
-}
-.box-footer{
-  height: 70px;
-  width: 940px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-}
-.menu-footer a {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #fff;
-  margin: 0 15px;
-  font-family: 'Jaldi', sans-serif;
-  font-size: 18px;
-}
-.menu-footer :hover {
-  transition: all 0.4s ;
-  transform: scale3d(1.3px);
-  color: rgb(167, 211, 255);
-}
-
-
-.logo-footer {
-  height: 40px;
-}
-
 .desaparecendo{
   display: none;
 }
@@ -236,6 +162,3 @@ footer{
   display: block;
 }
 
-
-
-/* fim do footer */
