--- a/Home/home.css
+++ b/Home/home.css
@@ -1,53 +1,13 @@
-/* fontes */
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Hepta+Slab&family=Hubballi&family=Jaldi&display=swap');
-
-html {
-    scroll-behavior: smooth;
-}
-body {
-    background-color: #F5FCFD;
-}
-
-.menu-header a {
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #062E38;
-    margin: 0 15px;
-    font-family: 'Jaldi', sans-serif;
-    font-size: 18px;
-}
-
-.logo {
-    height: 25px;
-   
-}
-
-header{
-    position: fixed;
-    top: 0;
-    height: 50px;
-    width: 100%;
-    display: flex;
-    background-color: #FAFEFF;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    z-index: 10;
-}
-.box-header {
-    height: 50px;
-    width: 940px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0 auto;
-}
-
+/* Div atras do header */
 #top-home {
 width: 50px;
 }
 
+/* Seletores do Banner */
 .img-banner {
     width: 100%;
 }
+
 .banner {
     justify-content: center;
     display: flex;
@@ -63,6 +23,8 @@ width: 50px;
     position: absolute; 
     top: 30%;
 }
+
+/* Seletores da seção */
 .sobre {
     margin-top: 30px;
 }
@@ -88,6 +50,7 @@ width: 50px;
     
 }
 
+/* Seletores da seção tipo de imóveis */
 .tipo-imoveis {
     width: 100%;
     justify-content: center;
@@ -113,39 +76,3 @@ width: 50px;
     width: 50px;
     height: 50px;
 }
-
-/* início do footer */
-.menu-footer a {
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #fff;
-    margin: 0 15px;
-    font-family: 'Jaldi', sans-serif;
-    font-size: 18px;
-  }
-  
-  .logo-footer {
-    height: 40px;
-  }
-  
-  footer{
-    height: 70px;
-    width: 100%;
-    background-color: #118CAB;
-    display: flex;
-  }
-  .box-footer{
-    height: 70px;
-    width: 940px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-  }
-  
-  /* fim do footer */
-
-
-
-
-
