--- a/Pesquisar-Imoveis/pesquisar-imoveis.css
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.css
@@ -1,52 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Hepta+Slab&family=Jaldi&display=swap');
-
-html{
-    scroll-behavior: smooth;
-}
-
 body{
-    background-color: #f5fcfd;
+    background: linear-gradient(180deg, rgba(17,140,171,1) 0%, rgba(115,213,237,1) 44%, rgba(200,244,255,1) 100%);
 }
-
-/* Header */
-.menu-header a {
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #062E38;
-    margin: 0 15px;
-    font-family: 'Jaldi', sans-serif;
-    font-size: 18px;
-  }
   
-  .logo {
-    height: 25px;
-   
-  }
-  
-  header{
-    position: fixed;
-    top: 0;
-    height: 50px;
-    width: 100%;
-    display: flex;
-    background-color: #FAFEFF;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    z-index: 10;
-  }
-  .box-header {
-    height: 50px;
-    width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0 auto;
-  }
-  /* fim do header */
-  
+/* Div atras do header */
   #top-pesquisa{
     height: 50px;
   }
 
+/* Caixa de 940px que limita os filtros */
 .filtros{
     width: 940px;
     margin: 0 auto;
@@ -54,20 +15,23 @@ body{
     display: flex;
 }
 
+/* Cada caixa de filtro */
 .filtro{
-    background-color: #d6f4fc;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #EDFBFF;
+    box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
     /* border-radius: 10px; */
     padding: 30px;
     margin: 30px 0;
     box-sizing: border-box;
 }
 
+/* titulo dos filtros */
 .filtro h2{
     font-size: 1.5em;
     margin-bottom: 10px;
 }
 
+/* icone dos tipos */
 .icon-filtro{
     height: 32px;
 }
@@ -75,29 +39,36 @@ body{
 .filtro-areaConstruida{
     height: 200px;
     width: 100%;
+
     display: flex;
     flex-direction: column;
 }
 
 .filtro-areaConstruida label{
-    width: 50%;
-    margin: 10px 0;
+    margin: 10px 0 5px 0;
+    font-size: 0.8em;
 }
 
 .filtro-areaConstruida input{
-    border: solid 1px #D2D2D2;
-    /* border-radius: 5px; */
-    height: 20px;
-    padding: 2px 10px;
     font-family: 'Hepta Slab', serif;
+    height: 20px;
+    width: 70%;
+    padding: 2px 10px;
+    border: 1px solid #00000000; /* Borda invisível*/
+    box-shadow: 2px 2px 10px 1px #0000001c;
 }
+
+.filtro-areaConstruida  input:focus {
+    outline: 0;
+    border: 1px solid #febb02;
+} 
 
 .filtro-esquerda{
     width: 60%;
 }
+
 .filtro-direita {
-    width: 37%;
-    margin-left: 3%;
+    width: 40%;
 }
 
 .filtro-tipoImovel{
@@ -105,11 +76,17 @@ body{
     width: 100%;    
 }
 
+.filtro-tipoImovel input:checked{
+    background-color: #febb02;
+}
+
+/* Tipos dos imóveis */
 .filtro-opcoes{
     display: flex;
     margin-top: 20px;
 }
 
+/* Dupla de tipos */
 .opcoes-dupla{
     display: flex;
     flex-direction: column;
@@ -123,13 +100,17 @@ body{
 }
 
 .filtro-bairro select{
-    border: solid 1px #D2D2D2;
-    /* border-radius: 5px; */
+    font-family: 'Hepta Slab', serif;
     height: 30px;
     width: 80%;
+    border: 1px solid #00000000;
     padding: 5px 10px;
-    font-family: 'Hepta Slab', serif;
+    box-shadow: 2px 2px 10px 1px #0000001c;
 }
+.filtro-bairro  select:focus {
+    outline: 0;
+    border: 1px solid #febb02;
+} 
 
 .filtro-cidade{
     height: 120px;
@@ -137,12 +118,17 @@ body{
 }
 
 .filtro-cidade input{
-    border: solid 1px #D2D2D2;
-    /* border-radius: 5px; */
+    font-family: 'Hepta Slab', serif;
     height: 30px;
     width: 60%;
+    border: 1px solid #00000000;
     padding: 5px 10px;
-    font-family: 'Hepta Slab', serif;
+    box-shadow: 2px 2px 10px 1px #0000001c;
+}
+
+.filtro-cidade input:focus{
+    outline: 0;
+    border: 1px solid #febb02;
 }
 
 .botoes{
@@ -155,16 +141,17 @@ body{
     margin: 0 5px;
     width: 250px;
     height: 35px;
-    color: #fff;
-    background-color: #00ACD7;
+    background-color: #febb02;
+    color: #096075;
     border: none;
-    /* border-radius: 5px; */
     text-transform: uppercase;
     font-weight: bold;
 }
 
-.bt:hover{
-    background-color: #2d849c;
+.bt:hover{    
+    transition: 0.2s all;
+    background-color: #83e6ff;
+    box-shadow: 2px 2px 10px 1px #0000001c;
     cursor: pointer;
 }
 
@@ -177,7 +164,7 @@ body{
 
 .texto-informacoes{
     font-family: 'Hepta Slab', serif;
-    color: #036d88;
+    color: #fff;
     font-size: 1.1em;
 }
 
@@ -194,20 +181,18 @@ body{
     display: flex;
     align-items: center;
 
-    /* border-radius: 10px; */
-    border: solid 2px #00ACD7;
     width: 100%;
 
     margin: 10px 0;
 
     transition: 0.2s all;
-
-    background-color: #fff;
+    
+    background-color: #EDFBFF;
+    box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
 .imovel:hover{
     transform: translateX(10px);
-    border: 2px solid #036d88;
     cursor: pointer;
 }
 
@@ -231,63 +216,6 @@ body{
     transition: 0.2s all;
 }
 
-/* .limpa-filtros{
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    height: 48px;
-    transition: 0.2s all;
+footer{
+    margin-top: 250px;
 }
-
-.limpa-filtros:hover{
-    cursor: pointer;
-    transform: scale(1.2) rotate(-10deg);
-}
-
-  .ajuda{
-    display: none;
-    color: #fff;
-    background-color: #00ACD7;
-    width: 100px;
-    padding: 10px;
-    border-radius: 4px;
-    position: fixed;
-    bottom: 60px;
-    right: 60px;
-  }
-
-  .limpa-filtros:hover ~ .ajuda{
-    display: block;
-  } */
-
-  /* início do footer */
-.menu-footer a {
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #fff;
-    margin: 0 15px;
-    font-family: 'Jaldi', sans-serif;
-    font-size: 18px;
-  }
-  
-  .logo-footer {
-    height: 40px;
-  }
-  
-  footer{
-    height: 70px;
-    width: 100%;
-    background-color: #118CAB;
-    display: flex;
-    margin-top: 100px;
-  }
-  .box-footer{
-    height: 70px;
-    width: 940px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-  }
-  
-  /* fim do footer */
