Adição da msg de erro quando um bairro tenta ser escolhido sem a seleção de uma cidade

--- a/Pesquisar-Imoveis/pesquisar-imoveis.css
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.css
@@ -99,6 +99,12 @@ body{
     width: 100%;
 }
 
+.erro-bairro{
+    display: none;
+    color: red;
+    font-size: 0.8em;
+}
+
 .filtro-bairro select{
     font-family: 'Hepta Slab', serif;
     height: 30px;
