--- a/Adicionar-imoveis/adicionar-imoveis.css
+++ b/Adicionar-imoveis/adicionar-imoveis.css
@@ -19,6 +19,8 @@ body{
   display: flex;
 }
 
+
+
 /* Cada caixa de filtro */
 .filtro{
   background-color: #EDFBFF;
@@ -101,18 +103,20 @@ body{
 .filtro-bairro{  
   height: 200px;
   width: 100%;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-.erro-bairro{
-  display: none;
-  color: red;
+.filtro-bairro label{
   font-size: 0.8em;
 }
 
 .filtro-bairro input{
   font-family: 'Hepta Slab', serif;
   height: 20px;
-  width: 80%;
+  width: 90%;
   border: 1px solid #00000000;
   padding: 5px 10px;
   box-shadow: 2px 2px 10px 1px #0000001c;
@@ -130,7 +134,6 @@ body{
 .filtro-localizacao input{
   font-family: 'Hepta Slab', serif;
   height: 20px;
-  width: 60%;
   border: 1px solid #00000000;
   padding: 5px 10px;
   box-shadow: 2px 2px 10px 1px #0000001c;
@@ -141,8 +144,31 @@ body{
   border: 1px solid #febb02;
 }
 
+.filtro-localizacao{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.filtro-localizacao label{
+  font-size: 0.8em;
+}
+
+#inCidade{
+  width: 482px;
+}
+
+#inRua{
+  width: 300px;
+}
+
+#inNumero{
+  width: 60px;
+}
+
 .endereco{
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .botoes{
